# agendao

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_CN.md  USER_GUIDE.md
crates/agendao-agent/: Cargo.toml
crates/agendao-agent/src/: message.rs
crates/agendao-api/: Cargo.toml
crates/agendao-api/src/: lib.rs
crates/agendao-cli/: Cargo.toml  build.rs
crates/agendao-cli-core/: Cargo.toml
crates/agendao-cli-core/src/: cli.rs  lib.rs  server_lifecycle.rs
crates/agendao-cli/src/: admin_import_export.rs  agent_cmd.rs  agent_stream_adapter.rs  api_client.rs  auth.rs  branding.rs  cli.rs  cli_session_store.rs  clipboard.rs  config_cmd.rs  db.rs  debug.rs  event_stream.rs  frontend_admin.rs  frontend_entry.rs  frontend_interactive.rs  generate.rs  github.rs  import_export.rs  lib.rs  local_dispatch.rs  local_server_bridge.rs  mcp_cmd.rs  provider_cmd.rs  providers.rs  remote.rs  run.rs  session_cmd.rs  skill_cmd.rs  util.rs
crates/agendao-cli/tests/: debug_docs_validate.rs
crates/agendao-client/: Cargo.toml
crates/agendao-client/src/: async_client.rs  blocking_client.rs  common.rs  lib.rs
crates/agendao-command/: Cargo.toml
crates/agendao-command-render/: Cargo.toml
crates/agendao-command-render/src/: branding.rs  cli_panel.rs  cli_style.rs  governance_fixtures.rs  lib.rs  live_semantic_consumer.rs  output_blocks.rs  run_status_labels.rs  terminal_presentation.rs  terminal_tool_block_display.rs
crates/agendao-command-runtime/: Cargo.toml
crates/agendao-command-runtime/src/: cli_permission.rs  cli_prompt.rs  cli_select.rs  interactive.rs  lib.rs
crates/agendao-command/commands/: init.md
crates/agendao-command/governance/: live_transcript_state_fixture.json
crates/agendao-command/src/: actions.rs  agent_presenter.rs  branding.rs  cli_markdown.rs  cli_permission.rs  cli_style.rs  governance_fixtures.rs  governance_tests.rs  interactive.rs  lib.rs  output_blocks.rs  run_status_labels.rs  stage_protocol.rs  start_work.rs  terminal_presentation.rs
crates/agendao-config/: Cargo.toml
crates/agendao-config/src/: external_tools.rs  lib.rs  runtime_budget.rs  store.rs
crates/agendao-core/: Cargo.toml
crates/agendao-core/src/: bus.rs  lib.rs
crates/agendao-execution-types/: Cargo.toml
crates/agendao-execution-types/src/: lib.rs  lifecycle.rs
crates/agendao-grep/: Cargo.toml
crates/agendao-launcher/: Cargo.toml  build.rs
crates/agendao-launcher/src/: lib.rs
crates/agendao-lsp/: Cargo.toml
crates/agendao-lsp/src/: lib.rs
crates/agendao-mcp/: Cargo.toml
crates/agendao-mcp/src/: auth.rs  client.rs  protocol.rs  transport.rs
crates/agendao-memory/: Cargo.toml
crates/agendao-memory/src/: artifact.rs  authority.rs  consolidation.rs  rules.rs  validation.rs
crates/agendao-multimodal/: Cargo.toml
crates/agendao-multimodal/src/: capabilities.rs  config.rs  explain.rs  lib.rs  parts.rs
crates/agendao-orchestrator/: Cargo.toml
crates/agendao-orchestrator/src/: agent_tree.rs  conversation.rs  core.rs  error.rs  execution_resolver.rs  iterative_workflow.rs  iterative_workflow_runtime.rs  iterative_workflow_runtime_tests.rs  lib.rs  lifecycle.rs  output_metadata.rs  prompt_execution.rs  request_execution.rs  skill_graph.rs  skill_list.rs  skill_tree.rs  traits.rs  verifier_engine.rs  workflow_artifacts.rs
crates/agendao-orchestrator/tests/: test_execute_prompt_with_session.rs  test_integration_boundary.rs  test_integration_concurrent.rs  test_integration_e2e.rs  test_integration_errors.rs  test_integration_streaming.rs  test_integration_tools.rs  test_performance.rs  test_streaming.rs
crates/agendao-permission/: Cargo.toml
crates/agendao-permission/src/: engine.rs
crates/agendao-plugin/: Cargo.toml
crates/agendao-plugin/builtin/: codex-auth.ts
crates/agendao-plugin/examples/: verify_native_dylib.rs
crates/agendao-plugin/host/: plugin-host.ts
crates/agendao-plugin/src/: feature_flags.rs  lib.rs  native.rs
crates/agendao-provider/: Cargo.toml
crates/agendao-provider/src/: artifact.rs  bridge.rs  cache.rs  catalog.rs  descriptor.rs  error_summary.rs  instance.rs  lib.rs  models.rs  protocol.rs  provider.rs  registry.rs  stream.rs  transport.rs
crates/agendao-provider/tests/: compliance.rs  instance_test.rs  protocol_routing_test.rs  protocol_test.rs  provider_integration.rs  provider_registry_snapshot.rs  v2_compliance.rs
crates/agendao-reratui/: BEHAVIORAL_DIFFERENCES.md  Cargo.toml  README.md  STRICT_MODE.md
crates/agendao-reratui/docs/: ARCHITECTURE.md  ASYNC_PATTERNS.md  COMPONENT_GUIDE.md  EXAMPLES.md  HOOKS_REFERENCE.md
crates/agendao-reratui/src/: component.rs  context_stack.rs  element.rs  event.rs  fiber.rs  fiber_tree.rs  global_events.rs  lib.rs  panic_handler.rs  render_context.rs  runtime.rs  strict_mode.rs
crates/agendao-reratui/tests/: component_integration.rs  react_parity.rs
crates/agendao-runtime-context/: Cargo.toml
crates/agendao-runtime-context/src/: lib.rs  wellknown.rs
crates/agendao-server/: Cargo.toml
crates/agendao-server-core/: Cargo.toml
crates/agendao-server-core/src/: frontend_events.rs  lib.rs  runtime_control.rs  runtime_events.rs  runtime_state.rs  stage_event_log.rs  stage_summary_store.rs
crates/agendao-server-local/: Cargo.toml
crates/agendao-server-local/src/: lib.rs
crates/agendao-server-pty/: Cargo.toml
crates/agendao-server-pty/src/: lib.rs
crates/agendao-server/assets/: autoresearch.scheduler.jsonc
crates/agendao-server/src/: lib.rs  main.rs  mcp_oauth.rs  oauth.rs  openapi.rs  orchestration_adapter.rs  pty.rs  recovery.rs  request_options.rs  runtime_control.rs  server.rs  stage_event_log.rs  unix_socket.rs  web.rs
crates/agendao-server/tests/: governance_replay.rs
crates/agendao-session/: Cargo.toml
crates/agendao-session-core/: Cargo.toml
crates/agendao-session-core/src/: lib.rs
crates/agendao-session/src/: compaction.rs  instruction.rs  lib.rs  mcp_bridge.rs  message.rs  message_v2.rs  repair_query.rs  session.rs  session_fork_metadata.rs  snapshot.rs  status.rs  summary.rs  system.rs  telemetry.rs  todo.rs  (+1 more)
docs/: README.md  (+35 more)
(+1331 files in other folders)
