[workspace]
resolver = "2"
default-members = ["crates/agendao"]
members = [
    "crates/agendao",
    "crates/agendao-reratui",
    "crates/agendao-api",
    "crates/agendao-launcher",
    "crates/agendao-client",
    "crates/agendao-core",
    "crates/agendao-output-blocks",
    "crates/agendao-stage-protocol",
    "crates/agendao-command-render",
    "crates/agendao-command-runtime",
    "crates/agendao-types",
    "crates/agendao-util",
    "crates/agendao-multimodal",
    "crates/agendao-voice",
    "crates/agendao-config",
    "crates/agendao-grep",
    "crates/agendao-permission",
    "crates/agendao-provider",
    "crates/agendao-state",
    "crates/agendao-runtime-context",
    "crates/agendao-memory",
    "crates/agendao-execution-types",
    "crates/agendao-session",
    "crates/agendao-session-core",
    "crates/agendao-skill",
    "crates/agendao-storage",
    "crates/agendao-storage-core",
    "crates/agendao-storage-sqlite",
    "crates/agendao-tool-core",
    "crates/agendao-tool",
    "crates/agendao-tool-web",
    "crates/agendao-agent",
    "crates/agendao-server-core",
    "crates/agendao-server-local",
    "crates/agendao-server-pty",
    "crates/agendao-server",
    "crates/agendao-watcher",
    "crates/agendao-lsp",
    "crates/agendao-mcp",
    "crates/agendao-cli-core",
    "crates/agendao-cli-admin",
    "crates/agendao-cli",
    "crates/agendao-command",
    "crates/agendao-plugin",
    "crates/agendao-orchestrator",
    "crates/agendao-tui-revue",
]

[workspace.package]
version = "2026.6.10"
edition = "2021"
authors = ["Biocheming"]
license = "MIT"

[profile.dev]
debug = 0

[profile.release]
strip = "debuginfo"
lto = "thin"
codegen-units = 1
debug = 0

[workspace.dependencies]
reratui = { path = "crates/agendao-reratui" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
parking_lot = "0.12"
regex = "1"
glob = "0.3"
dirs = "6"
async-trait = "0.1"
futures = "0.3"
url = "2.5"
sha2 = "0.10"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
