[package]
name = "agendao-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agendao-core = { path = "../agendao-core" }
agendao-execution-types = { path = "../agendao-execution-types" }
agendao-provider = { path = "../agendao-provider" }
agendao-permission = { path = "../agendao-permission" }
agendao-tool = { path = "../agendao-tool" }
agendao-types = { path = "../agendao-types" }
agendao-config = { path = "../agendao-config" }
agendao-plugin = { path = "../agendao-plugin" }
agendao-orchestrator = { path = "../agendao-orchestrator" }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
