[package]
name = "agendao-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agendao-types = { path = "../agendao-types" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
jsonc-parser = { version = "0.29.0", features = ["serde"] }
regex = { workspace = true }
tracing = { workspace = true }
arc-swap = "1"
toml = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
