[package]
name = "agendao-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
# Keep the stable core surface (`id`, `jsonrpc`) dependency-light by default.
# Runtime/process coordination facilities must be opted into explicitly.
default = []
event-bus = ["dep:tokio", "dep:tracing"]
subprocess-runtime = ["dep:tokio", "dep:tracing"]
process-registry = [
    "subprocess-runtime",
    "dep:chrono",
    "dep:once_cell",
    "dep:parking_lot",
]
agent-task-registry = ["dep:chrono", "dep:once_cell", "dep:parking_lot"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = "0.8"
chrono = { workspace = true, optional = true }
hex = "0.4"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt", "sync", "time"], optional = true }
tracing = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }
parking_lot = { version = "0.12", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
