[package]
name = "agendao-grep"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
walkdir = "2"
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
