[package]
name = "agendao-launcher"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
build = "build.rs"

[features]
default = []
embedded-web = ["rust-embed"]

[dependencies]
anyhow = { workspace = true }
dirs = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "rustls-tls-webpki-roots", "system-proxy"] }
rust-embed = { version = "8", optional = true }
tokio = { version = "1", features = ["process", "rt", "time"] }
url = { workspace = true }
which = "7"
tracing = { workspace = true }
