[package]
name = "agendao-lsp"
version.workspace = true
edition = "2021"
description = "LSP client for agendao"

[dependencies]
agendao-core = { path = "../agendao-core", features = ["subprocess-runtime", "process-registry"] }
tokio = { version = "1", features = ["fs", "io-util", "process", "rt", "sync", "time"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
url = "2.5"
lsp-types = "0.97"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
