[package]
name = "agendao-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agendao-core = { path = "../agendao-core", features = ["event-bus", "subprocess-runtime", "process-registry"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt", "sync", "time"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "rustls-tls-webpki-roots", "stream", "system-proxy"] }
reqwest-eventsource = "0.6"
url = { workspace = true }
dirs = { workspace = true }
oauth2 = { version = "5", default-features = false, features = ["reqwest", "rustls-tls"] }
sha2 = { workspace = true }
base64 = { workspace = true }
rand = "0.8"
chrono = { workspace = true }
axum = "0.8"
hex = "0.4"
