[package]
name = "agendao-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agendao-config = { path = "../agendao-config" }
agendao-runtime-context = { path = "../agendao-runtime-context" }
agendao-stage-protocol = { path = "../agendao-stage-protocol" }
agendao-state = { path = "../agendao-state" }
agendao-storage = { path = "../agendao-storage" }
agendao-types = { path = "../agendao-types" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
