[package]
name = "agendao-multimodal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agendao-config = { path = "../agendao-config" }
agendao-provider = { path = "../agendao-provider" }
agendao-session = { path = "../agendao-session" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
