[package]
name = "agendao-orchestrator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agendao-config = { path = "../agendao-config" }
agendao-execution-types = { path = "../agendao-execution-types" }
agendao-provider = { path = "../agendao-provider" }
agendao-session-core = { path = "../agendao-session-core" }
agendao-tool = { path = "../agendao-tool" }
agendao-types = { path = "../agendao-types" }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { version = "1", features = ["sync", "time"] }
thiserror = { workspace = true }
tracing = { workspace = true }
petgraph = "0.8"
regex = { workspace = true }
glob = { workspace = true }
walkdir = "2"
uuid = { workspace = true }
jsonc-parser = { version = "0.29.0", features = ["serde"] }
[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
