[package]
name = "agendao-permission"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agendao-plugin = { path = "../agendao-plugin" }
glob = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
lazy_static = "1.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
