[package]
name = "agendao-plugin"
version.workspace = true
edition = "2021"

[dependencies]
agendao-core = { path = "../agendao-core", features = ["subprocess-runtime", "process-registry"] }
agendao-types = { path = "../agendao-types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["fs", "io-util", "process", "rt", "sync", "time"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
which = "7"
dirs = "6"
libloading = "0.8"

[dev-dependencies]
agendao-config = { path = "../agendao-config" }
