[package]
name = "agendao-provider"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["http-transport", "streaming"]
http-transport = ["dep:reqwest"]
streaming = ["http-transport", "dep:tokio-stream"]

[dependencies]
agendao-types = { path = "../agendao-types" }
agendao-util = { path = "../agendao-util" }
tokio = { version = "1", features = ["fs", "macros", "rt", "sync", "time"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "rustls-tls-webpki-roots", "stream", "system-proxy"], optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
pin-project-lite = "0.2"
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
urlencoding = "2.1"
dirs = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
bytes = "1"
