[package]
name = "reratui"
version.workspace = true
edition = "2024"
authors.workspace = true
license.workspace = true
readme = "README.md"
description = "A modern, reactive TUI framework for Rust with React-inspired hooks and components, powered by ratatui"
publish = false

[dependencies]
# Terminal and UI
ratatui = { workspace = true, features = [
    "scrolling-regions",
    "unstable-backend-writer",
    "unstable-rendered-line-info",
    "unstable-widget-ref",
] }
crossterm = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-stream = "0.1"
futures = { workspace = true }

# Utilities
parking_lot = { workspace = true }
once_cell = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
proptest = "1.4"
serial_test = "3.0"
