[package]
name = "agendao-runtime-context"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agendao-config = { path = "../agendao-config" }
agendao-state = { path = "../agendao-state" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { version = "1", features = ["macros", "rt"] }
dirs = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "rustls-tls-webpki-roots", "system-proxy"] }
tracing = { workspace = true }
