[package]
name = "agendao-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agendao-core = { path = "../agendao-core" }
agendao-api = { path = "../agendao-api" }
agendao-agent = { path = "../agendao-agent" }
agendao-execution-types = { path = "../agendao-execution-types" }
agendao-multimodal = { path = "../agendao-multimodal" }
agendao-orchestrator = { path = "../agendao-orchestrator" }
agendao-provider = { path = "../agendao-provider" }
agendao-state = { path = "../agendao-state" }
agendao-runtime-context = { path = "../agendao-runtime-context" }
agendao-memory = { path = "../agendao-memory" }
agendao-session = { path = "../agendao-session" }
agendao-session-core = { path = "../agendao-session-core" }
agendao-skill = { path = "../agendao-skill" }
agendao-storage = { path = "../agendao-storage" }
agendao-types = { path = "../agendao-types" }
agendao-config = { path = "../agendao-config" }
agendao-permission = { path = "../agendao-permission" }
agendao-mcp = { path = "../agendao-mcp" }
agendao-plugin = { path = "../agendao-plugin" }
agendao-tool = { path = "../agendao-tool" }
agendao-command = { path = "../agendao-command" }
libc = { version = "0.2" }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
tokio-tungstenite = "0.26"
dirs = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }
portable-pty = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
hmac = "0.12"

[dev-dependencies]
tempfile = "3"
